@@ -1,4 +1,5 @@
 2.2.5
+ * Add nodetool gettimeout and settimeout commands (CASSANDRA-10953)
  * Enable GC logging by default (CASSANDRA-10140)
  * Optimize pending range computation (CASSANDRA-9258)
  * Skip commit log and saved cache directories in SSTable version startup check (CASSANDRA-10902)
